src/SdlSharp.ImGui.Native/dear_bindings/dcimgui.h


typedef struct ImVec2_t ImVec2;
typedef signed long long ImS64;    
typedef struct ImGuiMultiSelectIO_t ImGuiMultiSelectIO;                        
typedef int ImGuiWindowFlags;       
typedef ImS64 ImGuiSelectionUserData;
CIMGUI_API bool ImGui_ComboCallback(const char* label, int* current_item, const char* (*getter)(void* user_data, int idx), void* user_data, int items_count);  
CIMGUI_API bool ImGui_ComboCallbackEx(const char* label, int* current_item, const char* (*getter)(void* user_data, int idx), void* user_data, int items_count, int popup_max_height_in_items );
CIMGUI_API ImGuiMultiSelectIO* ImGui_EndMultiSelect(void);
CIMGUI_API void                ImGui_SetNextItemSelectionUserData(ImGuiSelectionUserData selection_user_data);
CIMGUI_API bool                ImGui_IsItemToggledSelection(void);                                              
CIMGUI_API bool ImGui_BeginListBox(const char* label, ImVec2 size );                                                                         
CIMGUI_API void ImGui_EndListBox(void);                                                                                                                          
CIMGUI_API bool ImGui_ListBox(const char* label, int* current_item, const char*const items[], int items_count, int height_in_items );
CIMGUI_API bool ImGui_ListBoxCallback(const char* label, int* current_item, const char* (*getter)(void* user_data, int idx), void* user_data, int items_count);  
CIMGUI_API bool ImGui_ListBoxCallbackEx(const char* label, int* current_item, const char* (*getter)(void* user_data, int idx), void* user_data, int items_count, int height_in_items );
CIMGUI_API void ImGui_PlotLinesEx(const char* label, const float* values, int values_count, int values_offset , const char* overlay_text , float scale_min , float scale_max , ImVec2 graph_size , int stride );
CIMGUI_API void ImGui_PlotLinesCallback(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count);      
CIMGUI_API void ImGui_PlotLinesCallbackEx(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset , const char* overlay_text , float scale_min , float scale_max , ImVec2 graph_size );
CIMGUI_API void ImGui_PlotHistogramEx(const char* label, const float* values, int values_count, int values_offset , const char* overlay_text , float scale_min , float scale_max , ImVec2 graph_size , int stride );
CIMGUI_API void ImGui_PlotHistogramCallback(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count);  
CIMGUI_API void ImGui_PlotHistogramCallbackEx(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset , const char* overlay_text , float scale_min , float scale_max , ImVec2 graph_size );
CIMGUI_API bool ImGui_BeginMenuBar(void);                                         
CIMGUI_API void ImGui_EndMenuBar(void);                                           
CIMGUI_API bool ImGui_BeginMainMenuBar(void);                                     
CIMGUI_API void ImGui_EndMainMenuBar(void);                                       
CIMGUI_API bool ImGui_BeginMenuEx(const char* label, bool enabled );  
CIMGUI_API void ImGui_EndMenu(void);                                              
CIMGUI_API bool ImGui_MenuItemEx(const char* label, const char* shortcut , bool selected , bool enabled ); 
CIMGUI_API bool ImGui_MenuItemBoolPtr(const char* label, const char* shortcut, bool* p_selected, bool enabled ); 
CIMGUI_API bool ImGui_BeginTooltip(void);                                        
CIMGUI_API void ImGui_EndTooltip(void);                                          
CIMGUI_API bool ImGui_BeginItemTooltip(void);                                        
CIMGUI_API bool ImGui_BeginPopup(const char* str_id, ImGuiWindowFlags flags );                                
CIMGUI_API bool ImGui_BeginPopupModal(const char* name, bool* p_open , ImGuiWindowFlags flags );  
CIMGUI_API void ImGui_EndPopup(void);                                                                                  
typedef enum
{
    ImGuiWindowFlags_None                      = 0,
    ImGuiWindowFlags_NoTitleBar                = 1<<0,   
    ImGuiWindowFlags_NoResize                  = 1<<1,   
    ImGuiWindowFlags_NoMove                    = 1<<2,   
    ImGuiWindowFlags_NoScrollbar               = 1<<3,   
    ImGuiWindowFlags_NoScrollWithMouse         = 1<<4,   
    ImGuiWindowFlags_NoCollapse                = 1<<5,   
    ImGuiWindowFlags_AlwaysAutoResize          = 1<<6,   
    ImGuiWindowFlags_NoBackground              = 1<<7,   
    ImGuiWindowFlags_NoSavedSettings           = 1<<8,   
    ImGuiWindowFlags_NoMouseInputs             = 1<<9,   
    ImGuiWindowFlags_MenuBar                   = 1<<10,  
    ImGuiWindowFlags_HorizontalScrollbar       = 1<<11,  
    ImGuiWindowFlags_NoFocusOnAppearing        = 1<<12,  
    ImGuiWindowFlags_NoBringToFrontOnFocus     = 1<<13,  
    ImGuiWindowFlags_AlwaysVerticalScrollbar   = 1<<14,  
    ImGuiWindowFlags_AlwaysHorizontalScrollbar = 1<<15,  
    ImGuiWindowFlags_NoNavInputs               = 1<<16,  
    ImGuiWindowFlags_NoNavFocus                = 1<<17,  
    ImGuiWindowFlags_UnsavedDocument           = 1<<18,  
    ImGuiWindowFlags_NoNav                     = ImGuiWindowFlags_NoNavInputs | ImGuiWindowFlags_NoNavFocus,
    ImGuiWindowFlags_NoDecoration              = ImGuiWindowFlags_NoTitleBar | ImGuiWindowFlags_NoResize | ImGuiWindowFlags_NoScrollbar | ImGuiWindowFlags_NoCollapse,
    ImGuiWindowFlags_NoInputs                  = ImGuiWindowFlags_NoMouseInputs | ImGuiWindowFlags_NoNavInputs | ImGuiWindowFlags_NoNavFocus,
    ImGuiWindowFlags_ChildWindow               = 1<<24,  
    ImGuiWindowFlags_Tooltip                   = 1<<25,  
    ImGuiWindowFlags_Popup                     = 1<<26,  
    ImGuiWindowFlags_Modal                     = 1<<27,  
    ImGuiWindowFlags_ChildMenu                 = 1<<28,  
} ImGuiWindowFlags_;
typedef enum
{
    ImGuiChildFlags_None                   = 0,
    ImGuiChildFlags_Borders                = 1<<0,  
    ImGuiChildFlags_AlwaysUseWindowPadding = 1<<1,  
    ImGuiChildFlags_ResizeX                = 1<<2,  
    ImGuiChildFlags_ResizeY                = 1<<3,  
    ImGuiChildFlags_AutoResizeX            = 1<<4,  
    ImGuiChildFlags_AutoResizeY            = 1<<5,  
    ImGuiChildFlags_AlwaysAutoResize       = 1<<6,  
    ImGuiChildFlags_FrameStyle             = 1<<7,  
    ImGuiChildFlags_NavFlattened           = 1<<8,  
} ImGuiChildFlags_;
typedef enum
{
    ImGuiHoveredFlags_None                         = 0,      
    ImGuiHoveredFlags_ChildWindows                 = 1<<0,   
    ImGuiHoveredFlags_RootWindow                   = 1<<1,   
    ImGuiHoveredFlags_AnyWindow                    = 1<<2,   
    ImGuiHoveredFlags_NoPopupHierarchy             = 1<<3,   
    ImGuiHoveredFlags_AllowWhenBlockedByPopup      = 1<<5,   
    ImGuiHoveredFlags_AllowWhenBlockedByActiveItem = 1<<7,   
    ImGuiHoveredFlags_AllowWhenOverlappedByItem    = 1<<8,   
    ImGuiHoveredFlags_AllowWhenOverlappedByWindow  = 1<<9,   
    ImGuiHoveredFlags_AllowWhenDisabled            = 1<<10,  
    ImGuiHoveredFlags_NoNavOverride                = 1<<11,  
    ImGuiHoveredFlags_AllowWhenOverlapped          = ImGuiHoveredFlags_AllowWhenOverlappedByItem | ImGuiHoveredFlags_AllowWhenOverlappedByWindow,
    ImGuiHoveredFlags_RectOnly                     = ImGuiHoveredFlags_AllowWhenBlockedByPopup | ImGuiHoveredFlags_AllowWhenBlockedByActiveItem | ImGuiHoveredFlags_AllowWhenOverlapped,
    ImGuiHoveredFlags_RootAndChildWindows          = ImGuiHoveredFlags_RootWindow | ImGuiHoveredFlags_ChildWindows,
    ImGuiHoveredFlags_ForTooltip                   = 1<<12,  
    ImGuiHoveredFlags_Stationary                   = 1<<13,  
    ImGuiHoveredFlags_DelayNone                    = 1<<14,  
    ImGuiHoveredFlags_DelayShort                   = 1<<15,  
    ImGuiHoveredFlags_DelayNormal                  = 1<<16,  
    ImGuiHoveredFlags_NoSharedDelay                = 1<<17,  
} ImGuiHoveredFlags_;
struct ImGuiMultiSelectIO_t
{
    ImVector_ImGuiSelectionRequest Requests;       
    ImGuiSelectionUserData         RangeSrcItem;   
    ImGuiSelectionUserData         NavIdItem;      
    bool                           NavIdSelected;  
    bool                           RangeSrcReset;  
    int                            ItemsCount;     
};
CIMGUI_API bool   ImGui_ComboObsolete(const char* label, int* current_item, bool (*old_callback)(void* user_data, int idx, const char** out_text), void* user_data, int items_count); 
CIMGUI_API bool   ImGui_ComboObsoleteEx(const char* label, int* current_item, bool (*old_callback)(void* user_data, int idx, const char** out_text), void* user_data, int items_count, int popup_max_height_in_items );
CIMGUI_API bool   ImGui_ListBoxObsolete(const char* label, int* current_item, bool (*old_callback)(void* user_data, int idx, const char** out_text), void* user_data, int items_count); 
CIMGUI_API bool   ImGui_ListBoxObsoleteEx(const char* label, int* current_item, bool (*old_callback)(void* user_data, int idx, const char** out_text), void* user_data, int items_count, int height_in_items );