src/Sdl3Sharp.ImGui/Native/ImGui.cs


    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_EndMultiSelect")]
    public static partial ImGuiMultiSelectIO* EndMultiSelect();

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_SetNextItemSelectionUserData")]
    public static partial void SetNextItemSelectionUserData(ImGuiSelectionUserData selection_user_data);

    /// <summary>
    /// Was the last item selection state toggled? Useful if you need the per-item information _before_ reaching EndMultiSelect(). We only returns toggle _event_ in order to handle clipping correctly.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_IsItemToggledSelection")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool IsItemToggledSelection();

    #endregion

    #region Widgets: List Boxes

    /// <summary>
    /// Widgets: List Boxes
    /// - This is essentially a thin wrapper to using BeginChild/EndChild with the ImGuiChildFlags_FrameStyle flag for stylistic changes + displaying a label.
    /// - If you don't need a label you can probably simply use BeginChild() with the ImGuiChildFlags_FrameStyle flag for the same result.
    /// - You can submit contents and manage your selection state however you want it, by creating e.g. Selectable() or any other items.
    /// - The simplified/old ListBox() api are helpers over BeginListBox()/EndListBox() which are kept available for convenience purpose. This is analogous to how Combos are created.
    /// - Choose frame width:   size.x &gt; 0.0f: custom  /  size.x &lt; 0.0f or -FLT_MIN: right-align   /  size.x = 0.0f (default): use current ItemWidth
    /// - Choose frame height:  size.y &gt; 0.0f: custom  /  size.y &lt; 0.0f or -FLT_MIN: bottom-align  /  size.y = 0.0f (default): arbitrary default height which can fit ~7 items
    /// open a framed scrolling region
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_BeginListBox")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool BeginListBox([MarshalAs(UnmanagedType.LPUTF8Str)] string label, ImVec2 size);

    /// <summary>
    /// only call EndListBox() if BeginListBox() returned true!
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_EndListBox")]
    public static partial void EndListBox();

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_ListBox")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool ListBox([MarshalAs(UnmanagedType.LPUTF8Str)] string label, int* current_item, nint items, int items_count, int height_in_items);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_ListBoxCallbackEx")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool ListBoxCallbackEx([MarshalAs(UnmanagedType.LPUTF8Str)] string label, int* current_item, nint getter, nint user_data, int items_count, int height_in_items);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_PlotLinesEx")]
    public static partial void PlotLinesEx([MarshalAs(UnmanagedType.LPUTF8Str)] string label, float* values, int values_count, int values_offset, [MarshalAs(UnmanagedType.LPUTF8Str)] string overlay_text, float scale_min, float scale_max, ImVec2 graph_size, int stride);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_PlotLinesCallbackEx")]
    public static partial void PlotLinesCallbackEx([MarshalAs(UnmanagedType.LPUTF8Str)] string label, nint values_getter, nint data, int values_count, int values_offset, [MarshalAs(UnmanagedType.LPUTF8Str)] string overlay_text, float scale_min, float scale_max, ImVec2 graph_size);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_PlotHistogramEx")]
    public static partial void PlotHistogramEx([MarshalAs(UnmanagedType.LPUTF8Str)] string label, float* values, int values_count, int values_offset, [MarshalAs(UnmanagedType.LPUTF8Str)] string overlay_text, float scale_min, float scale_max, ImVec2 graph_size, int stride);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_PlotHistogramCallbackEx")]
    public static partial void PlotHistogramCallbackEx([MarshalAs(UnmanagedType.LPUTF8Str)] string label, nint values_getter, nint data, int values_count, int values_offset, [MarshalAs(UnmanagedType.LPUTF8Str)] string overlay_text, float scale_min, float scale_max, ImVec2 graph_size);

    #endregion

    #region Widgets: Menus

    /// <summary>
    /// Widgets: Menus
    /// - Use BeginMenuBar() on a window ImGuiWindowFlags_MenuBar to append to its menu bar.
    /// - Use BeginMainMenuBar() to create a menu bar at the top of the screen and append to it.
    /// - Use BeginMenu() to create a menu. You can call BeginMenu() multiple time with the same identifier to append more items to it.
    /// - Not that MenuItem() keyboardshortcuts are displayed as a convenience but _not processed_ by Dear ImGui at the moment.
    /// append to menu-bar of current window (requires ImGuiWindowFlags_MenuBar flag set on parent window).
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_BeginMenuBar")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool BeginMenuBar();

    /// <summary>
    /// only call EndMenuBar() if BeginMenuBar() returns true!
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_EndMenuBar")]
    public static partial void EndMenuBar();

    /// <summary>
    /// create and append to a full screen menu-bar.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_BeginMainMenuBar")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool BeginMainMenuBar();

    /// <summary>
    /// only call EndMainMenuBar() if BeginMainMenuBar() returns true!
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_EndMainMenuBar")]
    public static partial void EndMainMenuBar();

    /// <summary>
    /// create a sub-menu entry. only call EndMenu() if this returns true!
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_BeginMenuEx")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool BeginMenuEx([MarshalAs(UnmanagedType.LPUTF8Str)] string label, [MarshalAs(UnmanagedType.U1)] bool enabled);

    /// <summary>
    /// only call EndMenu() if BeginMenu() returns true!
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_EndMenu")]
    public static partial void EndMenu();

    /// <summary>
    /// return true when activated.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_MenuItemEx")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool MenuItemEx([MarshalAs(UnmanagedType.LPUTF8Str)] string label, [MarshalAs(UnmanagedType.LPUTF8Str)] string shortcut, [MarshalAs(UnmanagedType.U1)] bool selected, [MarshalAs(UnmanagedType.U1)] bool enabled);

    /// <summary>
    /// return true when activated + toggle (*p_selected) if p_selected != NULL
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_MenuItemBoolPtr")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool MenuItemBoolPtr([MarshalAs(UnmanagedType.LPUTF8Str)] string label, [MarshalAs(UnmanagedType.LPUTF8Str)] string shortcut, bool* p_selected, [MarshalAs(UnmanagedType.U1)] bool enabled);

    #endregion

    #region Tooltips

    /// <summary>
    /// Tooltips
    /// - Tooltips are windows following the mouse. They do not take focus away.
    /// - A tooltip window can contain items of any types.
    /// - SetTooltip() is more or less a shortcut for the 'if (BeginTooltip()) { Text(...); EndTooltip(); }' idiom (with a subtlety that it discard any previously submitted tooltip)
    /// begin/append a tooltip window.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_BeginTooltip")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool BeginTooltip();

    /// <summary>
    /// only call EndTooltip() if BeginTooltip()/BeginItemTooltip() returns true!
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_EndTooltip")]
    public static partial void EndTooltip();

    #endregion

    #region Tooltips: helpers for showing a tooltip when hovering an item

    /// <summary>
    /// Tooltips: helpers for showing a tooltip when hovering an item
    /// - BeginItemTooltip() is a shortcut for the 'if (IsItemHovered(ImGuiHoveredFlags_ForTooltip) &amp;&amp; BeginTooltip())' idiom.
    /// - SetItemTooltip() is a shortcut for the 'if (IsItemHovered(ImGuiHoveredFlags_ForTooltip)) { SetTooltip(...); }' idiom.
    /// - Where 'ImGuiHoveredFlags_ForTooltip' itself is a shortcut to use 'style.HoverFlagsForTooltipMouse' or 'style.HoverFlagsForTooltipNav' depending on active input type. For mouse it defaults to 'ImGuiHoveredFlags_Stationary | ImGuiHoveredFlags_DelayShort'.
    /// begin/append a tooltip window if preceding item was hovered.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_BeginItemTooltip")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool BeginItemTooltip();

    #endregion

    #region Popups, Modals

    /// <summary>
    /// Popups, Modals
    /// - They block normal mouse hovering detection (and therefore most mouse interactions) behind them.
    /// - If not modal: they can be closed by clicking anywhere outside them, or by pressing ESCAPE.
    /// - Their visibility state (~bool) is held internally instead of being held by the programmer as we are used to with regular Begin*() calls.
    /// - The 3 properties above are related: we need to retain popup visibility state in the library because popups may be closed as any time.
    /// - You can bypass the hovering restriction by using ImGuiHoveredFlags_AllowWhenBlockedByPopup when calling IsItemHovered() or IsWindowHovered().
    /// - IMPORTANT: Popup identifiers are relative to the current ID stack, so OpenPopup and BeginPopup generally needs to be at the same level of the stack.
    /// This is sometimes leading to confusing mistakes. May rework this in the future.
    /// - BeginPopup(): query popup state, if open start appending into the window. Call EndPopup() afterwards if returned true. ImGuiWindowFlags are forwarded to the window.
    /// - BeginPopupModal(): block every interaction behind the window, cannot be closed by user, add a dimming background, has a title bar.
    /// return true if the popup is open, and you can start outputting to it.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_BeginPopup")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool BeginPopup([MarshalAs(UnmanagedType.LPUTF8Str)] string str_id, ImGuiWindowFlags flags);

    /// <summary>
    /// return true if the modal is open, and you can start outputting to it.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_BeginPopupModal")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool BeginPopupModal([MarshalAs(UnmanagedType.LPUTF8Str)] string name, bool* p_open, ImGuiWindowFlags flags);

    /// <summary>
    /// only call EndPopup() if BeginPopupXXX() returns true!
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_EndPopup")]
    public static partial void EndPopup();

    #endregion

    #region Popups: open/close functions
